Remove lombok dependency