@@ -5,12 +5,10 @@ import com.example.ztiproj.exception.InvalidMinesweeperResultException;
 import com.example.ztiproj.mapper.MinesweeperMapper;
 import com.example.ztiproj.repository.MinesweeperRepository;
 import com.example.ztiproj.service.api.MinesweeperService;
-import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * @author Mateusz Barnacki
@@ -18,23 +16,27 @@ import java.util.stream.Collectors;
  * @since 2022-08-11
  */
 @Service
-@AllArgsConstructor
 public class MinesweeperServiceImpl implements MinesweeperService {
     private final MinesweeperRepository repository;
     private final MinesweeperMapper mapper;
+
+    public MinesweeperServiceImpl(MinesweeperRepository repository, MinesweeperMapper mapper) {
+        this.repository = repository;
+        this.mapper = mapper;
+    }
 
     public List<MinesweeperDto> getRanking() {
         return repository.getTopScores()
                 .stream()
                 .map(mapper::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MinesweeperDto> getUserRanking(String userName) {
         return repository.getTopUserScores(userName)
                 .stream()
                 .map(mapper::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public MinesweeperDto addResult(MinesweeperDto minesweeperDto) {
